Start and end points can now be specified. Required re-writing the post-processing done on the goal node which was buggy